# rust-eth-client

./: .gitignore  Makefile  README.md  capsule.toml
contracts/eth-client/: Cargo.toml
contracts/eth-client/src/: helper.rs  logic.rs  main.rs
contracts/eth-client/src/types/: cell_data_view.rs  convert.rs  error.rs  mod.rs
contracts/eth-client/src/types/schemas/: basic.mol  cell_data.mol  dags_merkle_roots.mol  double_node_with_merkle_proof.mol  witness.mol
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs
tests/src/eth_client/: mod.rs
tests/src/eth_client/tests/: helper.rs  mod.rs  tests.rs  types.rs
tests/src/eth_client/types/: mod.rs
