[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
molecule = { version = "=0.6.0", default-features = false }
int-enum = { version = "0.4", default-features = false }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
primitive-types = { version = "0.7.2", default-features = false }
eth-spv-lib = { git = "https://github.com/LeonLi000/eth-spv-lib.git", default-features = false }
rlp = {version = "0.4.5", default-features = false }
futures = "0.1.26"

[dev-dependencies]
web3 = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.14"
