[package]
name = "eth-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.6.0"
ethash = { git = "https://github.com/LeonLi000/rust-ethash.git", default-features = false}
eth-spv-lib = { git = "https://github.com/LeonLi000/eth-spv-lib.git", default-features = false }
molecule = { version = "0.6.0", default-features = false }
rlp = {version = "0.4.5", default-features = false }
primitive-types = { version = "0.7.2", default-features = false }


[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
